# prem-relay-ai-chat

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yml  deploy_windows.txt  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: python-tests.yml
data/: .gitignore  app_config.example.json  connection_providers.example.json
src/: __init__.py  app.py  app_logger.py  app_logger_test.py  app_test.py  auth_password.py  config.py  config_test.py  models.py  models_test.py  schema.sql
src/infrastructure/: __init__.py  attachment.py  attachment_storage.py  attachment_storage_test.py  attachment_test.py  auth.py  auth_test.py  base_assistant.py  base_assistant_test.py  common.py  database.py  database_test.py  message.py  message_test.py  queries.py  query_test.py  thread.py  thread_test.py  user_assistant.py  user_assistant_test.py
src/llm/: __init__.py  client.py  client_test.py  input_builder.py  input_builder_test.py
src/presentation/: __init__.py  assistant.py  assistant_route_test.py  assistant_test.py  auth.py  auth_route_test.py  auth_test.py  chat.py  chat_message_route_test.py  chat_message_test.py  chat_route_test.py  chat_stream_route_test.py  chat_stream_test.py  chat_test.py  context.py  index.py  index_test.py  register_web_routes_test.py  register_web_test.py  runtime.py  runtime_test.py  setup.py  setup_test.py  template_test.py  test_support.py
src/service/: __init__.py  password.py  password_test.py  response_service.py  response_service_test.py
src/templates/: base.html  (+23 more)
(+96 files in other folders)
