[project]
name = "prem-relay-ai-chat"
version = "0.1.2"
description = "Chat with AI using OpenAI GPT models with SSE streaming"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "itsdangerous>=2.2.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
addopts = "-p no:cacheprovider"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["."]
